--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  font-weight: 700;
+  font-size: x-large;
+  text-transform: uppercase;
+  color: grey;
+  border-bottom: 3px solid black;
+  width: fit-content;
+}
+
+.TodoList_Input {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+  height: 15vh;
+  padding: 2rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.TodoList_Input input {
+  width: 80%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.TodoList_Table {
+  padding: 1rem;
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  /* display: grid; */
+  width: 80%;
+  height: 70vh;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.TodoList_Table ul li {
+  list-style: none;
+  margin: 10px 0px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.TodoList_Table ul li h6 {
+  width: 80%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.TodoList_Table ul li span {
+  width: 20%;
+}
+
+@media only screen and (max-width: 770px) {
+  .TodoList_Table {
+    padding: 0.5rem;
   }
-  to {
-    transform: rotate(360deg);
+
+  .TodoList_Table ul li h6 {
+    width: 70%;
+  }
+  
+  .TodoList_Table ul li span {
+    width: 20%;
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  .TodoList_Table {
+    width: 100%;
+    padding: 1rem;
+  }
+
+  .TodoList_Table ul li h6 {
+    width: 50%;
+  }
+  
+  .TodoList_Table ul li span {
+    width: 10%;
+    font-size: 8px !important;
+  }
+
+  .TodoList_Table ul li {
+    margin: 10px 0px;
   }
 }
